Fix tags on item pages, add some more white space to homepage publications

--- a/assets/sass/_section-list.scss
+++ b/assets/sass/_section-list.scss
@@ -40,6 +40,10 @@
     .img-thumbnail {
         max-height: 370px;
     }
+
+    .list-item {
+        margin-bottom: 2 * $unit-margin;
+    }
 }
 
 .page {
